fix: dark mode table colour contrasts

--- a/_sass/modules/_tables.scss
+++ b/_sass/modules/_tables.scss
@@ -16,17 +16,6 @@ table {
 	}
 }
 
-tr {
-
-	&:nth-child(even) {
-		background-color: lighten($grey, 30%);
-
-		@media (prefers-color-scheme: dark) {
-			background-color: lighten(black, 10%);
-		}
-	}
-}
-
 td,
 th {
 	text-align: left;
